# vender

./: Cargo.toml
cmd/iodin/: Cargo.toml  build.rs
cmd/iodin/src/: main.rs  server.rs
cmd/mega-cli/: main.go
cmd/vender/: main.go
hardware/i2c-mdb-atmega-gate/i2c-mdb_atmega-gate/: main.c  main.h  mdb.c  twi.c
hardware/iodin-client/: iodin.go
hardware/mdb/bill/: bill.go  bill_test.go
hardware/mdb/coin/: coin.go  coin_test.go
hardware/mega-client/: const.gen.go  mega.go  protocol.go  response_t_string.go  types.gen.go
hardware/pigpio-rust/: Cargo.toml  build.rs
hardware/pigpio-rust/src/: lib.rs  mock.rs  pigpio.rs
head/money/: bill.go  coin.go  hardware.go
head/state/: config.go
