[workspace]
members = ["cmd/iodin"]
default-members = ["cmd/iodin"]

[profile.bench]
codegen-units = 1
debug = true
debug-assertions = true
incremental = false
lto = false
opt-level = 3
overflow-checks = true

[profile.dev]
codegen-units = 16
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 1
overflow-checks = true

[profile.test]
codegen-units = 16
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 2
overflow-checks = true

[profile.release]
codegen-units = 1
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true
